WebContent/css/svgShapes.css
@CHARSET "ISO-8859-1";

/* General */

text {
	fill: black;
	font-size: 12px;
}

/******************************************
 * Override JointJS styles
 ******************************************/

.label rect {
	display: none;
}

.highlighted {
	opacity: initial;
}

@media screen and (-webkit-min-device-pixel-ratio: 0) {
	.highlighted {
		outline: none;
	}
}

/******************************************
 * Highlighting
 ******************************************/

.precise.DependencyShape.highlighted .link-tools {
	opacity: 1;
}

.precise.DependencyShape.highlighted .connection-wrap {
	opacity: .4;
	stroke-opacity: .4;
}

.precise.LocationShape {
	pointer-events: none;
}

.precise.LocationShape.highlightable {
	pointer-events: visible;
}

/******************************************
 * Edit Modes
 ******************************************/

.add-task {
	cursor: crosshair;
}

.add-dependency .precise.TaskShape {
	cursor: pointer; 
}

.add-dependency .precise.TaskShape rect {
	fill: #f1f1b8;
}

.add-precedence .precise.TaskShape.highlighted {
	cursor: move; 
}

.add-precedence .precise.TaskShape.highlighted .outline {
	fill: transparent;
	stroke: black;
	stroke-dasharray: 10,10;
}

